# quickconjugate

./: Dockerfile  README.md  conjugate.py  install.sh  pyproject.toml  requirements-webapp.txt  requirements.txt  webapp.py
src/quickconjugate/: __main__.py  cli.py  conjugate.py
