[project]
name = "quickconjugate"
version = "0.1.0"
description = "Conjugate Spanish words in your terminal"
authors = [
    {name = "emzilia",email = "you@example.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml (>=5.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
conj = "quickconjugate.cli:app.process_args"
